added notes/pseudo code to start || started questions object

--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    CODE QUIZ HOMEWORK
-
-
-
-
-    
-    <script src="./JavaScripts/mainScript.js"></script>
-    <script src="./JavaScripts/questions.js"></script>
-    <script src="./JavaScripts/score.js"></script>
+   
+    <script src="./Assets/script.js"></script>
 </body>
 </html>
