--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Assets/style.css">
+
 </head>
 <body>
-   
+    <div class="container"> 
+        <div class="row" style="margin-top: 80px;"> 
+            <div class="col-12">
+                <div class="card" style="text-align: center;">
+                    <h5 class="card-header" >CAN YOU DO IT?</h5>
+                    <div class="card-body">
+                        <h4 class="card-title">30 Second Code Quiz Challenge</h4>
+                        <p class="card-text">Answer the following code-related questions, as best as you can, within 30 seconds. 
+                            Keep in mind, incorrect answers will penalize your time by 5 seconds, as well as your score.</p>
+                        <a href="#" class="btn btn-primary" style="margin-top: 50px"> Start Quiz </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./Assets/script.js"></script>
 </body>
 </html>
