--- a/index.html
+++ b/index.html
@@ -10,22 +10,66 @@
 
 </head>
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="banner" style="text-align: center">
+          <h2 class="display-4">Code Quiz Challenge</h2>
+          <p class="lead">Do you think you can answer 5 code-related questions in 30 seconds?</p>
+        </div>
+    </div>
+    
+    <!-- Example -->
+    <!-- <div class="container">
+        <h1 class="welcome">Welcome to Speed Reader</h1>
+        <h2 id="countdown"></h1>
+        <h3 id="main"></h2>
+      </div> -->
+
+      <!-- // main page // -->
     <div class="container"> 
-        <div class="row" style="margin-top: 80px;"> 
+        <div class="row" style="margin-top: 50px;"> 
             <div class="col-12">
                 <div class="card" style="text-align: center;">
-                    <h5 class="card-header" >CAN YOU DO IT?</h5>
+                    <h5 class="card-header">CAN YOU DO IT?</h5>
                     <div class="card-body">
-                        <h4 class="card-title">30 Second Code Quiz Challenge</h4>
-                        <p class="card-text">Answer the following code-related questions, as best as you can, within 30 seconds. 
-                            Keep in mind, incorrect answers will penalize your time by 5 seconds, as well as your score.</p>
-                        <a href="#" class="btn btn-primary" style="margin-top: 50px"> Start Quiz </a>
+                        <p class="card-text">5 questions. 30 seconds.<br>
+                            <br>
+                            THE CHALLENGE: <br> 
+                            5 seconds will be subtracted for every wrong answer. <br>
+                            Wrong answer will be subtracted from your total score at the end of the quiz. <br></p>
+                        <a href="#" class="btn btn-primary" style="margin-top: 25px"> Start Quiz </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+            
     <script src="./Assets/script.js"></script>
 </body>
 </html>
+
+
+    <!-- // Question #1 // -->
+        <!-- <div class="container"> 
+        <div class="row" style="margin-top: 80px;"> 
+            <div class="col-12">
+                <div class="card">
+                    <h5 class="card-header" style="text-align: center;">30 Second Code Quiz Challenge</h5>
+                    <div class="card-body">
+                        <h5 class="card-title">Question #1</h5>
+                        <p class="card-text">Which one is NOT a fundamental programming language of the web?</p>
+                        <div class="container" style="text-align: center;">
+                            <div class="row">Lorem, ipsum dolor.</div>
+                            <div class="row">Dolore, blanditiis aut.</div>
+                            <div class="row">Veritatis, sunt quam?</div>
+                            <div class="row">Cumque, sequi suscipit?</div>
+                        </div>
+                        <a href="#" class="btn btn-primary" style="margin-top: 50px"> next </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+
+
+
