--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
             
-    <!-- <script src="./Assets/script.js"></script> -->
+    <script src="./Assets/script.js"></script>
 </body>
 </html>
 
