CSS: styled quiz html

--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
 
     <h5 class="time" style="text-align: left;"></h5>
     <div class="container"> 
-        <div class="row" style="margin-top: 80px;"> 
+        <div class="row" style="margin-top: 45px;"> 
             <div class="col-12">
                 <div class="card">
                     <h5 class="card-header" style="text-align: center;">30 Second Code Quiz Challenge</h5>
@@ -34,7 +34,7 @@
                         </div>
                         <!-- <a href="#" class="btn btn-primary" style="margin-top: 25px"> next </a> -->
                         <div class="question-controls">
-                            <button id="start-btn" class="start-btn btn"> Start </button>
+                            <!-- <button id="start-btn" class="start-btn btn"> Start </button> -->
                             <button id="next-btn" class="start-btn btn"> Next </button> 
                         </div> 
                     </div>
