a just-to-be-safe commit

--- a/quiz.html
+++ b/quiz.html
@@ -24,8 +24,8 @@
                     <h5 class="card-header" style="text-align: center;">30 Second Code Quiz Challenge</h5>
                     <div class="card-body">
                         <div id="question-container" class="hide">
-                            <div id="question"> Question </div>
-                            <div id="answer-buttons" class="btn-grid"> 
+                            <div id="questions"> Question </div>
+                            <div id="answer-btns" class="btn-grid"> 
                                 <button class="btn"> Answer 1 </button>
                                 <button class="btn"> Answer 2 </button>
                                 <button class="btn"> Answer 3 </button>
@@ -34,7 +34,7 @@
                         </div>
                         <!-- <a href="#" class="btn btn-primary" style="margin-top: 25px"> next </a> -->
                         <div class="question-controls">
-                            <!-- <button id="start-btn" class="start-btn btn"> Start </button> -->
+                            <!-- <button id="restart-btn" class="start-btn btn"> Try Again! </button> -->
                             <button id="next-btn" class="start-btn btn"> Next </button> 
                         </div> 
                     </div>
