Added timer // Explained homework on README

--- a/quiz.html
+++ b/quiz.html
@@ -15,10 +15,10 @@
           <p class="lead">Do you think you can answer 5 code-related questions in 30 seconds?</p>
         </div>
     </div>
-
-    <h5 class="time" style="text-align: left;"></h5>
+    
+    <h5 class="timer"></h5>
     <div class="container"> 
-        <div class="row" style="margin-top: 45px;"> 
+        <div class="row" style="margin-top: 15px;"> 
             <div class="col-12">
                 <div class="card">
                     <h5 class="card-header" style="text-align: center;">30 Second Code Quiz Challenge</h5>
@@ -32,9 +32,8 @@
                                 <button class="btn"> Answer 4 </button> 
                             </div>
                         </div>
-                        <!-- <a href="#" class="btn btn-primary" style="margin-top: 25px"> next </a> -->
                         <div class="question-controls">
-                            <!-- <button id="restart-btn" class="start-btn btn"> Try Again! </button> -->
+                            <button id="start-btn" class="start-btn btn"> Start </button>
                             <button id="next-btn" class="start-btn btn"> Next </button> 
                         </div> 
                     </div>
